--- a/index.html
+++ b/index.html
@@ -141,21 +141,10 @@
 
 
 
-    <script>      
-      var viewport = document.getElementById('viewport');
-      var width    = viewport.width;
-      var height   = viewport.height;
-
-      var renderer = new THREE.WebGLRenderer({ canvas : viewport });
-      renderer.setClearColor( 0x000000, 1 );
-      renderer.setSize( height, width );
-      renderer.autoClear = true;
-      
-      scene = new THREE.Scene();
-      camera = new THREE.PerspectiveCamera( 75, width / height, 0.1, 1000 );
-      camera.position.set( 0, 00, 200 );
-
-      renderTargetGlow = new THREE.WebGLRenderTarget( width, height,  { minFilter: THREE.LinearFilter, magFilter: THREE.LinearFilter, format: THREE.RGBFormat });
+    <script>
+      visualizer = new Visualizer({
+        canvas : document.getElementById('viewport');
+      })
 
       var glowCamera = new THREE.PerspectiveCamera( 75, width / height, 0.1, 1000 );
       glowCamera.position.set( 0, 00, 200 );
@@ -168,6 +157,10 @@
       plane2 = createPlane(0x00ffff)
       gridScene.add(plane2);
       glowScene.add(plane1);
+
+      
+      var renderTargetGlow = new THREE.WebGLRenderTarget( width, height,  { minFilter: THREE.LinearFilter, magFilter: THREE.LinearFilter, format: THREE.RGBFormat });
+
 
       glowcomposer = new THREE.EffectComposer( renderer, renderTargetGlow );
       var effectHBlur = new THREE.ShaderPass( THREE.HorizontalBlurShader );
